--- a/layouts/shortcodes/svg.html
+++ b/layouts/shortcodes/svg.html
@@ -1,3 +1,3 @@
 <figure>
-  {{ readFile (print "svg/" (index .Params 0)) | safeHTML }}
+  {{ os.ReadFile (print "svg/" (index .Params 0)) | safeHTML }}
 </figure>
