--- a/themes/ink-free/layouts/_default/list.html
+++ b/themes/ink-free/layouts/_default/list.html
@@ -6,14 +6,14 @@
 	<div class="container wrapper list">
 		{{ partial "head.html" . }}
 
-		{{ if isset .Data "Term" }}
-			<h2>{{ .Data.Term }}</h2>
+		{{ if eq .Kind "term" }}
+			<h2>{{ .Title }}</h2>
 		{{ else }}
 		<h2 class="page-title">{{ .Name }}</h2>
 		{{ end }}
 
 		<ul class="posts flat">
-			{{- range .Data.Pages -}}
+			{{- range .Pages -}}
 			{{- if (in (.Site.Params.excludedTypes | default (slice "page")) .Type) -}}
 			{{- else -}}
 			<li class="post">
@@ -21,7 +21,7 @@
 					<div class="meta">
 						<div class="date">
 							<span class="day">{{ dateFormat "02" .Date }}</span>
-							<span class="rest">{{ if $.Site.Data.month }}{{ index $.Site.Data.month (printf "%d" .Date.Month) }} {{ .Date.Year }}{{ else }}{{ dateFormat "Jan 2006" .Date }}{{ end }}</span>
+							<span class="rest">{{ if hugo.Data.month }}{{ index hugo.Data.month (printf "%d" .Date.Month) }} {{ .Date.Year }}{{ else }}{{ dateFormat "Jan 2006" .Date }}{{ end }}</span>
 						</div>
 					</div>
 					<div class="matter">
@@ -31,10 +31,10 @@
 						<span class="description">
 							{{ if isset .Params "description" }}
 								{{ .Description }}
-							{{ else if gt (len .RawContent) 120 }}
-								{{ slicestr .RawContent 0 120 }}...
+							{{ else if gt (len .Plain) 120 }}
+								{{ slicestr .Plain 0 120 }}...
 							{{ else }}
-								{{ .RawContent }}
+								{{ .Plain }}
 							{{ end }}
 						</span>
 					</div>
