--- a/themes/ink-free/layouts/_default/single.html
+++ b/themes/ink-free/layouts/_default/single.html
@@ -11,7 +11,7 @@
 					<div class="meta">
 						<div class="date">
 							<span class="day">{{ dateFormat "02" .Date }}</span>
-							<span class="rest">{{ if $.Site.Data.month }}{{ index $.Site.Data.month (printf "%d" .Date.Month) }} {{ .Date.Year }}{{ else }}{{ dateFormat "Jan 2006" .Date }}{{ end }}</span>
+							<span class="rest">{{ if hugo.Data.month }}{{ index hugo.Data.month (printf "%d" .Date.Month) }} {{ .Date.Year }}{{ else }}{{ dateFormat "Jan 2006" .Date }}{{ end }}</span>
 						</div>
 					</div>
 				{{ end }}
@@ -65,20 +65,20 @@
 				{{ end }}
 			</div>
 
-			{{- if .Site.DisqusShortname -}}
-			{{- $.Scratch.Set "isDisqus" true -}}
+			{{- if .Site.Config.Services.Disqus.Shortname -}}
+			{{- $.Store.Set "isDisqus" true -}}
 
 			{{- if and (isset .Params "type") (in .Site.Params.disableDisqusTypes .Params.type) -}}
-				{{- $.Scratch.Set "isDisqus" false -}}
+				{{- $.Store.Set "isDisqus" false -}}
 			{{- end -}}
 
 			{{- if and (isset .Params "disqus") (eq .Params.disqus false) -}}
-				{{- $.Scratch.Set "isDisqus" false -}}
+				{{- $.Store.Set "isDisqus" false -}}
 			{{- else if and (isset .Params "disqus") (eq .Params.disqus true) -}}
-				{{- $.Scratch.Set "isDisqus" true -}}
+				{{- $.Store.Set "isDisqus" true -}}
 			{{- end -}}
 
-			{{- if eq ($.Scratch.Get "isDisqus") true -}}
+			{{- if eq ($.Store.Get "isDisqus") true -}}
 			{{- partial "disqus.html" . -}}
 			{{- end -}}
 			{{- end -}}
