--- a/themes/ink-free/layouts/_default/term.html
+++ b/themes/ink-free/layouts/_default/term.html
@@ -16,7 +16,7 @@
 					<div class="meta">
 						<div class="date">
 							<span class="day">{{ dateFormat "02" .Date }}</span>
-							<span class="rest">{{ if $.Site.Data.month }}{{ index $.Site.Data.month (printf "%d" .Date.Month) }} {{ .Date.Year }}{{ else }}{{ dateFormat "Jan 2006" .Date }}{{ end }}</span>
+							<span class="rest">{{ if hugo.Data.month }}{{ index hugo.Data.month (printf "%d" .Date.Month) }} {{ .Date.Year }}{{ else }}{{ dateFormat "Jan 2006" .Date }}{{ end }}</span>
 						</div>
 					</div>
 					<div class="matter">
@@ -26,10 +26,10 @@
 						<span class="description">
 							{{ if isset .Params "description" }}
 								{{ .Description }}
-							{{ else if gt (len .RawContent) 120 }}
-								{{ slicestr .RawContent 0 120 }}...
+							{{ else if gt (len .Plain) 120 }}
+								{{ slicestr .Plain 0 120 }}...
 							{{ else }}
-								{{ .RawContent }}
+								{{ .Plain }}
 							{{ end }}
 						</span>
 					</div>
