--- a/themes/ink-free/layouts/_default/terms.html
+++ b/themes/ink-free/layouts/_default/terms.html
@@ -14,12 +14,11 @@
 		{{ $min := 1 }}
 		{{ $size := $min }}
 
-		{{ $data := .Data }}
 		<div class="tag-cloud">
 		{{ range $key, $value := .Data.Terms.ByCount }}
 			{{ $size := (add (mul (div $value.Count $biggest) (sub $max $min)) $min) }}
 			{{ $size := (cond (eq $biggest $smallest) $min $size) }}
-			<a style="font-size: {{ $size }}rem;" href="{{ $.Site.LanguagePrefix | absURL }}{{ $data.Plural }}/{{ $value.Name | urlize }}/">{{ $value.Name }}<sup>{{ $value.Count }}</sup></a>
+			<a style="font-size: {{ $size }}rem;" href="{{ $value.Page.RelPermalink }}">{{ $value.Page.Title }}<sup>{{ $value.Count }}</sup></a>
 		{{ end }}
 		</div>
 	</div>
