--- a/themes/ink-free/layouts/partials/header.html
+++ b/themes/ink-free/layouts/partials/header.html
@@ -23,6 +23,7 @@
 	{{- template "_internal/twitter_cards.html" . -}}
 	<link rel="stylesheet" type="text/css" media="screen" href="{{ .Site.BaseURL }}css/normalize.css" />
 	<link rel="stylesheet" type="text/css" media="screen" href="{{ .Site.BaseURL }}css/main.css" />
+	<link rel="stylesheet" type="text/css" media="screen" href="{{ .Site.BaseURL }}css/syntax.css" />
 	{{- if isset .Site.Params "customcss" }}
 		<link rel="stylesheet" type="text/css" href="{{ .Site.BaseURL }}{{ .Site.Params.customCSS }}" />
 	{{ end }}
@@ -31,6 +32,17 @@
         {{- if isset .Site.Params "customdarkcss" }}
                 <link id="dark-scheme" rel="stylesheet" type="text/css" href="{{ .Site.BaseURL }}{{ .Site.Params.customDarkCSS }}" />
         {{- end }}
+
+	{{- if or (eq .Site.Params.mode "auto") (eq .Site.Params.mode "dark") }}
+	<script>
+		(function() {
+			var scheme = localStorage.getItem("scheme");
+			if (scheme === "dark" || (scheme === null && window.matchMedia && window.matchMedia("(prefers-color-scheme: dark)").matches)) {
+				document.documentElement.classList.add("dark");
+			}
+		})();
+	</script>
+	{{- end }}
 
 	{{ if and (isset .Site.Params "social") (isset .Site.Params "feathericonscdn") (eq .Site.Params.featherIconsCDN true) -}}
 		<script src="https://cdn.jsdelivr.net/npm/feather-icons/dist/feather.min.js"></script>
